# python-snappy

./: README.md  pyproject.toml
python_snappy/: __init__.py
snappy_pure/: snappy.py
tests/: test_snappy.py
