[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-snappy-pure"
version = "0.1.0"
description = "Pure Python Snappy decompression"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["snappy", "compression", "decompression"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Compression",
]

[project.optional-dependencies]
test = ["pytest>=7.0", "python-snappy>=0.6"]

[project.urls]
Homepage = "https://github.com/yourusername/python-snappy"
Repository = "https://github.com/yourusername/python-snappy"

[tool.hatch.build.targets.wheel]
packages = ["python_snappy"]
